Add logo and make some new themes

--- a/beander-6953969/layout/theme.liquid
+++ b/beander-6953969/layout/theme.liquid
@@ -10,15 +10,20 @@
 </head>
 <body>
   <nav>
-    {% for link in linklists.main-menu.links %}
-    <div class="navitem {%if link.active%} current {% endif %}"><a href="{{link.url}}">{{link.title}}</a></div>
-    {% endfor %}
+    <section>
+      {% for link in linklists.main-menu.links %}
+      <div class="navitem {%if link.active%} current {% endif %}"><a href="{{link.url}}">{{link.title}}</a></div>
+      {% endfor %}
+    <section>
   </nav>
+  <div class="logo">
+    {{'logo.png' | asset_url | img_tag: 'Logo' }}
+  </div>
   <section>
-      {{ content_for_layout}}
+    {{ content_for_layout}}
   </section>
   <footer>
-  <p>thest test test test test</p>
-</footer>
+    <p>thest test test test test</p>
+  </footer>
 </body>
 </html>
