--- a/beander-6953969/assets/form.css
+++ b/beander-6953969/assets/form.css
@@ -7,6 +7,8 @@ input[type='submit'] {
 .product.description {
   max-width: 50%;
   display:inline-block;
+  padding-left:2rem;
+  box-sizing: border-box;
 }
 section {
   min-height: 100%;
