--- a/beander-6953969/assets/style.css
+++ b/beander-6953969/assets/style.css
@@ -35,8 +35,8 @@ body {
 .card {
   display: inline-block;
   width: 240px;
-  padding: 10px;
-  margin: 1.5rem 10px;
+  padding: 0;
+  margin: 1.5rem 46px;
 }
 
 article {
@@ -116,17 +116,17 @@ section:after {
   font-size: .75rem;
 }
 nav {
-  height: 4rem;
+  height: 3rem;
   background: #ddd;
   border: 1px solid #cfcfcf;
 }
 .navitem {
   display: inline-block;
   padding: 0 1rem;
-  height: 4rem;
-  line-height:  4rem;
+  height: 3rem;
+  line-height: 3rem;
   border-right: 1px solid #cfcfcf;
-  min-width: 5rem;
+  /*min-width: 5rem;*/
   font-weight: 900;
   text-transform: uppercase;
 }
@@ -140,6 +140,14 @@ nav a {
 }
 nav a:visited {
   color: #333;
+}
+.logo {
+  max-width: 300px;
+  margin: 3rem auto;
+}
+.logo img {
+  max-width: 300px;
+  float:none;
 }
 footer {
   background: #ccc;
