--- a/beander-6953969/assets/form.css
+++ b/beander-6953969/assets/form.css
@@ -5,12 +5,38 @@ input[type='submit'] {
   background:#4c2e2f;
   color:#d3a03a;
 }
-
-.product.description {
+table {
+  width: 100%;
+  margin-bottom: 2rem;
+}
+th {
+  text-align: left;
+}
+.subtotal {
+  float: right;
+  font-size: 2rem;
+  font-weight: 100;
+}
+.links {
+  float:right;
+  clear: both;
+  margin: 1rem 0;
+}
+.links > * {
+  margin: 0 0.5rem;
+}
+.pages {
+  text-align: center;
+  margin: 1rem 0;
+}
+.product {
   display:inline-block;
   box-sizing: border-box;
   padding-left:2rem;
   max-width: 50%;
+}
+.product .details {
+  margin-bottom: 3rem;
 }
 section {
   margin-bottom: -6rem;
@@ -23,62 +49,4 @@ html,body {
   height: 100%;
 }
 
-.score {
-  display: inline-block;
-  width: 20%;
-}
-.score b {
-  display:inline-block;
-  margin: .2rem 0;
-}
-.value {
-  display:inline-block;
-  padding: .5rem;
-  max-width: 2.25rem;
-  max-height: 2.25rem;
-  background: white;
-  font-weight: 900;
-/*  border: 1px solid #cfcfcf;
-*/  font-size: 1.75rem;
-}
 
-.info {
-  display:inline-block;
-  box-sizing: border-box;
-  padding: 0.5rem 1rem;
-  width: 100%;
-  /*border: 1px solid #d3a03a;*/
-  background: #4c2e2f;
-}
-
-.card {
-  display: inline-block;
-  margin: 1.5rem 46px;
-  padding: 0;
-  width: 240px;
-}
-
-article {
-  padding: 0 10px;
-  width: 50%;
-}
-
-.price {
-  display: inline-block;
-  width:75%;
-}
-.price p {
-  margin: 0;
-  padding: .1rem 0;
-  font-size: .85rem;
-}
-.price em {
-  font-weight: 100;
-}
-.info h6 {
-  margin: .2rem 0;
-}
-.info b {
-  text-transform: uppercase;
-  font-size: .75rem;
-}
