--- a/beander-6953969/assets/style.css
+++ b/beander-6953969/assets/style.css
@@ -12,6 +12,12 @@ h1,h2,h3,h4,h5,h6 {
 .bright {
   color: #d3a03a;
 }
+.ticker {
+  background: #4c2e2f;
+  display:inline;
+  padding: 0.4rem 0.5rem;
+  text-transform: uppercase;
+}
 h6 {
   margin-bottom: 1.65rem;
   font-size: 1rem;
@@ -53,13 +59,40 @@ section:after {
 .carousel {
   overflow: hidden;
   margin: 3rem auto;
-  max-width:940px;
+  max-width:1000px;
   height: 25rem;
   background: #4c2e2f;
 }
-.slide {
-  max-width: 940px;
+.slide-container {
+  width: 4000rem;
   height: 25rem;
+  transition: all 0.4s ease;
+  padding: 0;
+  margin: 0;
+}
+.slide {
+  width: 1000px;
+  height: 25rem;
+  background-size:cover;
+  padding: 0;
+  margin: 0;
+  float:left;
+  position: relative;
+}
+.slide:hover:after {
+  position: absolute;
+  left: 0; 
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display:block;
+  content:"";
+  background: rgba(0,0,0,0.1);
+}
+.slide img {
+  max-width: 1000px;
+  background-size:cover;
+  float: none !important;
 }
 
 nav {
@@ -67,7 +100,13 @@ nav {
   /*border: 1px solid #d3a03a;*/
   background: #4c2e2f;
 }
-.navitem {
+nav ul {
+  max-width: 1000px;
+  margin: auto;
+  display:block;
+  padding: 0;
+}
+nav ul li {
   display: inline-block;
   padding: 0 1rem;
   height: 4rem;
@@ -100,17 +139,96 @@ footer {
   /*border: 1px solid #d3a03a;*/
   background: #4c2e2f;
 }
-
-@media (max-width: 959px) {
-  section {
-    max-width: 640px;
-  }
+.score {
+  display: inline-block;
+  width: 11%;
 }
-@media (max-width: 639px) {
+.score b {
+  display:inline-block;
+  margin: .2rem 0;
+  width: 100%;
+  text-align: center;
+  background: none: ;
+}
+.value {
+  display:inline-block;
+  padding: .5rem;
+  max-width: 2.25rem;
+  max-height: 2.25rem;
+  background: #d3a03a ;
+  color: #4c2e2f;
+  font-weight: 900;
+  font-size: 1.75rem;
+  border-radius: 50%;
+}
+
+.info {
+  display:inline-block;
+  width: 464px;
+  height: 100%;
+  position: absolute;
+  left:0;
+  transition: all 0.3s ease;
+  padding: 1rem 1rem 1rem 0;
+}
+.info:hover {
+  background :rgba(0,0,0,0.3);
+  transition: all 0.3s ease;
+}
+.card {
+  display: inline-block;
+  margin: 10px;
+  padding: 0;
+  width: 480px;
+  overflow: hidden;
+  color: #d3ac2a;
+  position:relative;
+  clear: none;
+}
+
+article {
+  padding: 0 10px;
+  width: 50%;
+}
+
+.price {
+  display: inline-block;
+  width:75%;
+}
+.price p {
+  margin: 1rem 0;
+  padding: .1rem 0;
+  font-size: .85rem;
+}
+.price span {
+  background: #4c2e2f;
+  padding: .4rem :;
+}
+.price em {
+  font-weight: 100;
+}
+.ticker {
+  background: #4c2e2f;
+  padding: .25rem .5rem;
+  display: inline;
+  margin: .6rem 0;
+  text-transform: uppercase;
+  color: #d3ac2a;
+}
+.info b {
+  text-transform: uppercase;
+  font-size: .75rem;
+}
+
+@media (max-width: 1100px) {
+/*  section {
+    max-width: 640px;
+  }*/
+
   article {
     display: block;
     margin: 1rem auto;
-    max-width: 400px;
+    width: 470px !important;
   }
   section,.carousel {
     margin: 0;
